# HackGT8

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  server.ts
importer/: Cargo.toml
importer/migrations/2021-10-23-060249_clothes_table/: up.sql
importer/src/: main.rs
migrations/2021-10-23-060249_clothes_table/: down.sql
migrations/2021-10-23-080301_swipe_table/: down.sql  up.sql
prisma/: schema.prisma
src/: home.rs  lists.rs  main.rs  schema.rs  tables.rs
static/: styles.css  swipe.js
templates/: demo.html  home.html  lists.html
views/: dislikes.hbs  home.hbs  likes.hbs
